--- a/DAN_XLIX_Milan_Mitic/WpfHotel/Views/AddEmployee.xaml
+++ b/DAN_XLIX_Milan_Mitic/WpfHotel/Views/AddEmployee.xaml
@@ -5,8 +5,83 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfHotel.Views"
         mc:Ignorable="d"
-        Title="AddEmployee" Height="450" Width="800">
+        Title="Add Employee"
+        Height="450"
+        Width="800">
     <Grid>
-        
+        <Label Content="Full name:"
+               HorizontalAlignment="Left"
+               Margin="40,10,0,0"
+               VerticalAlignment="Top"
+               RenderTransformOrigin="-1.579,0.192" />
+        <Label Content="Birth date:"
+               HorizontalAlignment="Left"
+               Margin="40,40,0,0"
+               VerticalAlignment="Top" />
+        <Label Content="E-mail:"
+               HorizontalAlignment="Left"
+               Margin="40,70,0,0"
+               VerticalAlignment="Top" />
+        <Label Content="Username:"
+               HorizontalAlignment="Left"
+               Margin="40,100,0,0"
+               VerticalAlignment="Top" />
+        <Label Content="Password:"
+               HorizontalAlignment="Left"
+               Margin="40,130,0,0"
+               VerticalAlignment="Top" />
+        <TextBox HorizontalAlignment="Left"
+                 Height="23"
+                 Margin="160,13,0,0"
+                 TextWrapping="Wrap"
+                 Text="{Binding Account.FullName, UpdateSourceTrigger=PropertyChanged}"
+                 VerticalAlignment="Top"
+                 Width="120" />
+        <TextBox HorizontalAlignment="Left"
+                 Height="23"
+                 Margin="160,43,0,0"
+                 TextWrapping="Wrap"
+                 Text="{Binding Account.DateOfBirth, UpdateSourceTrigger=PropertyChanged}"
+                 VerticalAlignment="Top"
+                 Width="120" />
+        <TextBox HorizontalAlignment="Left"
+                 Height="23"
+                 Margin="160,73,0,0"
+                 TextWrapping="Wrap"
+                 Text="{Binding Account.Email, UpdateSourceTrigger=PropertyChanged}"
+                 VerticalAlignment="Top"
+                 Width="120" />
+        <TextBox HorizontalAlignment="Left"
+                 Height="23"
+                 Margin="160,103,0,0"
+                 TextWrapping="Wrap"
+                 Text="{Binding Account.UserName, UpdateSourceTrigger=PropertyChanged}"
+                 VerticalAlignment="Top"
+                 Width="120" />
+        <TextBox HorizontalAlignment="Left"
+                 Height="23"
+                 Margin="160,133,0,0"
+                 TextWrapping="Wrap"
+                 Text="{Binding Account.Pass, UpdateSourceTrigger=PropertyChanged}"
+                 VerticalAlignment="Top"
+                 Width="120" />
+        <Button Content="Save"
+                Command="{Binding Save, UpdateSourceTrigger=PropertyChanged}"
+                HorizontalAlignment="Left"
+                Margin="40,360,0,0"
+                VerticalAlignment="Top"
+                Width="75"
+                RenderTransformOrigin="0.32,2.25" />
+        <Button Content="Close"
+                Command="{Binding Close, UpdateSourceTrigger=PropertyChanged}"
+                HorizontalAlignment="Left"
+                Margin="120,360,0,0"
+                VerticalAlignment="Top"
+                Width="75" />
+        <Label Content="YYYY-MM-DD"
+               HorizontalAlignment="Left"
+               Margin="285,43,0,0"
+               VerticalAlignment="Top"
+               RenderTransformOrigin="0.132,0.269" />
     </Grid>
 </Window>
