commit before merge

--- a/DAN_XLIX_Milan_Mitic/WpfHotel/Views/AddEmployee.xaml
+++ b/DAN_XLIX_Milan_Mitic/WpfHotel/Views/AddEmployee.xaml
@@ -30,6 +30,26 @@
                HorizontalAlignment="Left"
                Margin="40,130,0,0"
                VerticalAlignment="Top" />
+        <Label Content="Hotel floor:"
+               HorizontalAlignment="Left"
+               Margin="40,160,0,0"
+               VerticalAlignment="Top" />
+        <Label Content="Gender:"
+               HorizontalAlignment="Left"
+               Margin="40,190,0,0"
+               VerticalAlignment="Top" />
+        <Label Content="Citizenship:"
+               HorizontalAlignment="Left"
+               Margin="40,220,0,0"
+               VerticalAlignment="Top" />
+        <Label Content="Engagement:"
+               HorizontalAlignment="Left"
+               Margin="40,250,0,0"
+               VerticalAlignment="Top" />
+        <Label Content="Salary:"
+               HorizontalAlignment="Left"
+               Margin="40,280,0,0"
+               VerticalAlignment="Top" />
         <TextBox HorizontalAlignment="Left"
                  Height="23"
                  Margin="160,13,0,0"
@@ -63,6 +83,41 @@
                  Margin="160,133,0,0"
                  TextWrapping="Wrap"
                  Text="{Binding Account.Pass, UpdateSourceTrigger=PropertyChanged}"
+                 VerticalAlignment="Top"
+                 Width="120" />
+        <TextBox HorizontalAlignment="Left"
+                 Height="23"
+                 Margin="160,163,0,0"
+                 TextWrapping="Wrap"
+                 Text="{Binding Employee.HotelFloor, UpdateSourceTrigger=PropertyChanged}"
+                 VerticalAlignment="Top"
+                 Width="120" />
+        <TextBox HorizontalAlignment="Left"
+                 Height="23"
+                 Margin="160,193,0,0"
+                 TextWrapping="Wrap"
+                 Text="{Binding Employee.Gender, UpdateSourceTrigger=PropertyChanged}"
+                 VerticalAlignment="Top"
+                 Width="120" />
+        <TextBox HorizontalAlignment="Left"
+                 Height="23"
+                 Margin="160,223,0,0"
+                 TextWrapping="Wrap"
+                 Text="{Binding Employee.Cityzenship, UpdateSourceTrigger=PropertyChanged}"
+                 VerticalAlignment="Top"
+                 Width="120" />
+        <ComboBox HorizontalAlignment="Left"
+                  DisplayMemberPath="EngagementName"
+                  ItemsSource="{Binding EngagementList, UpdateSourceTrigger=PropertyChanged}"
+                  SelectedItem="{Binding Employee.Engagement, UpdateSourceTrigger=PropertyChanged}"
+                  Margin="160,253,0,0"
+                  VerticalAlignment="Top"
+                  Width="120" />
+        <TextBox HorizontalAlignment="Left"
+                 Height="23"
+                 Margin="160,283,0,0"
+                 TextWrapping="Wrap"
+                 Text="{Binding Employee.Salary, UpdateSourceTrigger=PropertyChanged}"
                  VerticalAlignment="Top"
                  Width="120" />
         <Button Content="Save"
